# aikiframework

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  PACKAGE-LICENSING.in  README  README.fedora  README.md  VERSION  VERSION.in  aiki.php  autogen.sh  bootstrap.php  bot.php  configure.ac  index.php  setup_plugin.php  style.php  update.php
assets/apps/: image_viewer.php
assets/extensions/: readme
assets/javascript/: aiki.js
assets/lib/: update_num_uploads.php
assets/plugins/: ajax.php  (+18 more)
configs/: CreateTables.in  Makefile.am  aiki-defs.inc  changelog.php  config.php  defs.inc  defs.php  htaccess.inc  last-revision  z-aiki.in
desktop/: Makefile.am  aiki-create-db-in.desktop  aiki-create-usr-in.desktop  aiki-drop-db-in.desktop  aiki-drop-usr-in.desktop  aiki-in.desktop  aiki-in.directory  aiki-in.menu  desktop.in
libs/: AikiArray.php  AikiCurl.php  AikiException.php  AikiScript.php  AikiSession.php  Archive.php  Backup.php  Bot.php  CssParser.php  Engine_aiki.php  Engine_handlebars.php  Engine_v8.php  Errors.php  File.php  Forms.php  Log.php  Output.php  Plugins.php  Records.php  SqlMarkup.php  Updater.php  Upgrade.php  UpgradeDB.php  Util.php  aiki.php  config.php  dictionary.php  image.php  input.php  installer.php  languages.php  membership.php  message.php  parser.php  security.php  site.php  text.php  url.php  view_parser.php  widgets.php  (+1 more)
man/: Makefile.am  man.in
rpm/: Makefile.am  spec.in
scripts/: Makefile.am  aiki.in  bone-clean.sh  chmods.sh  stage.sh
sql/: CreateTables.sql  CreateUser-in.sql  DropUser-in.sql  InsertDefaults.sql  InsertVariable-in.sql  UpdateDefaults.sql
src/: Makefile.am  aiki-in.php  aiki.php  bootstrap.php  index.php  style.php
src/assets/: Makefile.am
src/assets/apps/: Makefile.am  image_viewer.php
src/assets/apps/admin/: Makefile.am  aikiflow.php  config.php  control_panel.js  database_forms.php  events.php  log_view.php  run_sql.php  urls_widgets.php
src/assets/apps/admin/images/: Makefile.am
src/assets/apps/admin/images/icons/: Makefile.am
src/assets/apps/admin/update/: Makefile.am  backup.php  check.php  update.js  validate.php
src/assets/apps/aiki/: Makefile.am
src/assets/apps/captcha/: captcha.php
src/assets/apps/installer/: installer.css  installer.php
src/assets/apps/tools/: aiki_tools.php
src/assets/apps/tools/languages/: es.po
src/assets/extensions/: Makefile.am
src/assets/extensions/aiki/: Makefile.am
src/assets/images/: Makefile.am
src/assets/images/aiki/: Makefile.am
src/assets/javascript/: Makefile.am  aiki.js
src/assets/javascript/aiki/: Makefile.am
src/assets/javascript/codemirror/: Makefile.am
src/assets/javascript/codemirror/css/: Makefile.am  docs.css  phpcolors.css
src/assets/javascript/codemirror/js/: Makefile.am  codemirror.js  editor.js  highlight.js  mirrorframe.js  parsejavascript.js  parsephphtmlmixed.js  parsesparql.js  parsexml.js  stringstream.js  tokenize.js  tokenizejavascript.js  tokenizephp.js  undo.js
src/assets/javascript/jquery/: Makefile.am
src/assets/javascript/jquery/css/: Makefile.am
src/assets/javascript/jquery/css/smoothness/: Makefile.am
src/assets/javascript/jquery/css/smoothness/images/: Makefile.am
src/assets/javascript/jquery/plugins/: Makefile.am  css.js  jquery.form.js
src/assets/javascript/jquery/plugins/jstree/: Makefile.am  _lib.js  flat.xsl  nested.xsl  tree_component.css
src/assets/javascript/jquery/plugins/jstree/themes/: Makefile.am
src/assets/javascript/jquery/plugins/jstree/themes/default/: Makefile.am
src/assets/javascript/plupload/: Makefile.am  jquery.plupload.queue.min.js  plupload.queue.css  upload.php
src/assets/javascript/plupload/img/: Makefile.am
src/assets/uploads/: Makefile.am
src/configs/: Makefile.am  aiki-defs.inc  config.php  defs.inc  htaccess.in  htaccess.inc  z-aiki.in
src/libs/: AikiArray.php  AikiCurl.php  AikiException.php  AikiScript.php  AikiSession.php  Archive.php  Backup.php  CssParser.php  Errors.php  File.php  Forms.php  Log.php  Makefile.am  Output.php  Plugins.php  Records.php  SqlMarkup.php  Updater.php  Upgrade.php  aiki.php  aiki_array.php  aiki_curl.php  bot.php  config.php  core.php  css_parser.php  dictionary.php  errors.php  forms.php  image.php  input.php  installer.php  languages.php  membership.php  message.php  openid.php  output.php  parser.php  php.php  plugins.php  (+9 more)
src/libs/archive/: AikiZipArchive.php  Makefile.am
src/libs/backup/: DatabaseBackup.php  FileBackup.php  Makefile.am
src/libs/classes/: Makefile.am  dictionaryArrayClass.php  dictionaryTableClass.php
src/libs/database/: Makefile.am  mysql.php  oracle8_9.php  pdo.php  postgresql.php  sqlite.php
src/libs/file/: CurlTransfer.php  Makefile.am  TransferInterface.php
src/libs/session/: DatabaseSession.php  Makefile.am  SessionInterface.php
src/libs/updater/: DatabaseUpdater.php  FileUpdater.php  Makefile.am  UpdaterInterface.php  Updates.php
src/libs/upgrade/: ConfigUpgrade.php  CoreUpgrade.php  Makefile.am  SiteUpgrade.php  UpgradeInterface.php
src/sql/: CreateTables.sql  InsertDefaults.sql  InsertVariable-in.sql  Makefile.am
src/system/: Makefile.am  core.php  widgets.php
src/system/database/: Makefile.am  index.php  mssql.php  mysql.php  oracle8_9.php  pdo.php  postgresql.php  sqlite.php
src/system/libraries/: Log.php  Makefile.am  OAuthServer.php  aiki_array.php  aiki_curl.php  aiki_oauth.php  aiki_openid.php  bot.php  captcha.php  errors.php  forms.php  image.php  input.php  installer.php  languages.php  membership.php  message.php  oauth.php  openid.php  output.php  parser.php  php.php  records.php  security.php  sql_markup.php  text.php  url.php  wiki.php
src/system/sql/: CreateDatabase-in.sql  CreateTables.sql  CreateUser-in.sql  DropDatabase-in.sql  DropUser-in.sql  InsertDefaults.sql  InsertVariable-in.sql  Makefile.am  UserExists-in.sql
src/system/updates/: Makefile.am  README
system/: core.php  index.php  widgets.php
tests/: Makefile.am  README  bootstrap.php  phpunit.xml
tests/libs/: LogTest.php  UtilTest.php
tests/system/libraries/: LogTest.php
(+146 files in other folders)
